WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314371
[GFC][Crash] Grid items with auto height triggering a crash in blockContentSizeSuggestion()
https://bugs.webkit.org/show_bug.cgi?id=314371
Summary
[GFC][Crash] Grid items with auto height triggering a crash in blockContentSi...
Yulun Wu
Reported
2026-05-07 22:58:38 PDT
rdar://176527830
Attachments
Add attachment
proposed patch, testcase, etc.
Yulun Wu
Comment 1
2026-05-08 10:48:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64560
EWS
Comment 2
2026-05-19 04:49:21 PDT
Committed
313478@main
(e9a9f1b34ebc): <
https://commits.webkit.org/313478@main
> Reviewed commits have been landed. Closing PR #64560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug